added search page for received order page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -34,8 +34,8 @@
               <li><%= link_to "Change Password", edit_user_registration_path %></li>
               <li><%= link_to "Bank Details",bank_details_path %></li>
               <li><%= link_to "My Post",posts_path%></li>
-              <li class="active"><%= link_to "My Order/Received",order_receives_path%></li>
-              <li><%= link_to "My Booking", bookings_path%></li>
+              <li><%= link_to "My Order/Received",order_receives_path%></li>
+              <li class="active"><%= link_to "My Booking", bookings_path%></li>
               <li><%= link_to "Payment", nil%></li>
               <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
             </ul>
