--- a/app/views/faqs/_form.html.erb
+++ b/app/views/faqs/_form.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_include_tag "jquery-1.8.3.min","jquery.validate.min","admin_validation" %>
-<%= form_for(@faq) do |f| %>
+<script src="/assets/faqs.js"></script>
+<%= form_for @faq, :html => { :multipart => true } do |f| %>
   <% if @faq.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@faq.errors.count, "error") %> prohibited this faq from being saved:</h2>
