--- a/app/views/faqs/frequently_asked_question.html.erb
+++ b/app/views/faqs/frequently_asked_question.html.erb
@@ -30,11 +30,11 @@ ddaccordion.init({
 <div class="main-new">
   <ul class="verticle-menu">
     <li><a href="#">Contact Us</a></li>
-    <li class="active"><%= link_to "FAQs",faq_path%></li>
+    <li class="active"><%= link_to "FAQs",frequently_asked_question_path%></li>
   </ul>
   <div class="right-side">
     <div class="blue-header">
-      <%= form_tag faq_path, method: :get do %>
+      <%= form_tag frequently_asked_question_path, method: :get do %>
       <span class="font20"><%= text_field_tag :search, params[:search]%></span>
       <div class="search">
         <%= image_submit_tag("search_new.png")%>
