Booking page integrated

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -129,7 +129,9 @@
                           </label>
                         <%end%>
                         <!--<span class="tasks-list-desc">Left Label</span>-->
-                        </label>
+                        <p class="vmp"> 
+                          <%= link_to "View Post", booking_path(booking.id) %>
+                        </p>
                         </p>
                         </div>
                         
