--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-    
+
 
    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script>
@@ -59,6 +59,10 @@
 
       google.maps.event.addDomListener(window, 'load', initialize);
 
+      jQuery(document).ready(function(){
+        $("#ref_comment").load('<%= books_comments_path(:post_id => @post.id) %>');
+      });//]]>  
+
       </script>
 
       <%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css" %>
@@ -66,7 +70,7 @@
 
 
 
-    <div class="main-new">
+        <div class="main-new">
             <ul class="verticle-menu">
              <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
               <li><%= link_to "Change Password", edit_user_registration_path %></li>
@@ -132,7 +136,7 @@
                           <li><div>Total Amount</div> <span>$<%= @booking.price %></span></li>
                           <li><div>Status</div> <span>Waiting for drop-off confirmation</span></li>
                           
-                          <a href="#" class="cdo">Confirm drop-off</a>
+                          <%= link_to "Confirm drop-off ", drop_off_bookings_path(:booking_id => @booking.id ), :remote=>true, :class=>"cdo" %> 
                           
                           </ul>
 
@@ -166,37 +170,11 @@
                         <% end %>
                     </div>
                     
-                    <ul>
-                    <li>
-                    <p>Juliette</p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                    <span>
-                    October 2014
-                    </span>
-                    </li>
-                    
-                    <li>
-                    <p>Rbert</p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
-                    inventore veritatis et quasi.
-                    <span>
-                    October 2014
-                    </span>
-                    </li>
-                    
-                    <li>
-                    <p>Fanny</p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                    inventore veritatis et quasi.
-                    <span>
-                    October 2014
-                    </span>
-                    </li>
+                   
+                    <div id="ref_comment"> </div>
                     
                     
-                    </ul>
-                    <a href="#" class="more">More</a>
+                    
                     
                     </div>
                     
