--- a/app/views/faqs/frequently_asked_question.html.erb
+++ b/app/views/faqs/frequently_asked_question.html.erb
@@ -29,7 +29,7 @@ ddaccordion.init({
 
 <div class="main-new">
   <ul class="verticle-menu">
-    <li><a href="#">Contact Us</a></li>
+    <li><%= link_to "Contact Us",home_contactus_path%></li>
     <li class="active"><%= link_to "FAQs",frequently_asked_question_path%></li>
   </ul>
   <div class="right-side">
