--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,11 +5,11 @@
                     <li ><%= link_to "Personal Information",edit_user_path(current_user)%></li>
                     <li class="active"><%= link_to "Change Password", edit_user_registration_path%></li>
                     <li> <%= link_to "Bank Detail", bank_details_path%></li>
-                    <li><a href="#">My Post</a></li>
-                    <li><a href="#">My Order Received</a></li>
-                    <li><a href="#">My Booking</a></li>
-                    <li><a href="#">Payment</a></li>
-                    <li><a href="#">Message</a></li>
+                    <li><%= link_to "My Post",posts_path%></li>
+                    <li><%= link_to "My Order/Received",order_receives_path%></li>
+                    <li><%= link_to "My Booking", bookings_path%></li>
+                    <li><%= link_to "Payment", payments_path%></li>
+                    <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
                 </ul>
 
    <div class="new_login4">
