--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -25,7 +25,7 @@
               
 
                 <div class="massage"><%= f.text_area :message,:cols => "40", :rows => "40",placeholder: "Message", :style=>"width:290px; height:80px;", :id=>"topic1" %></div>
-                <%= f.submit "submit", :class => "submit button"%><br>   
+                <%= f.submit "Submit", :class => "submit button"%><br>   
                 <% end %>
                
                 
