--- a/app/views/comments/books.html.erb
+++ b/app/views/comments/books.html.erb
@@ -3,6 +3,8 @@
 <%= render :partial => 'comments/book_comment', :locals => { :comments => @comments } %>
 </div>
 
+<% if @comments.next_page %>
 <%= link_to 'More', books_comments_path(:post_id => params[:post_id], :page => @comments.next_page), :class => 'more', :remote => true if @comments.next_page %>
+<% end %>
 
 
