--- a/app/views/messages/_reply.html.erb
+++ b/app/views/messages/_reply.html.erb
@@ -4,6 +4,6 @@
       <%= hidden_field_tag :recipient_id, params[:recv_id] %>
       <%= hidden_field_tag :reply,"reply"%>
   
-      <%= f.submit "Reply", :class=>"btn btn-primary"  %>
+      <%= f.submit "", :class=>"message_btn"  %>
 
   <% end %>
